kubernetes/05-orders-db.yaml
# Base de datos MySQL de orders-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
  namespace: microapp
  labels: {app: orders-db}
spec:
  replicas: 1
  selector:
    matchLabels: {app: orders-db}
  template:
    metadata:
      labels: {app: orders-db}
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          readinessProbe:
            exec:
              command: ["sh", "-c", "mysqladmin ping -h 127.0.0.1 -uroot -p$MYSQL_ROOT_PASSWORD"]
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 20
          volumeMounts:
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: initdb
          configMap:
            name: orders-sql
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: microapp
spec:
  type: ClusterIP
  selector: {app: orders-db}
  ports:
    - port: 3306
      targetPort: 3306
