kubernetes/10-users.yaml
# users-service: Deployment (2 replicas) + Service ClusterIP (puerto 3001)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: microapp
  labels: {app: users-service}
spec:
  replicas: 2
  selector:
    matchLabels: {app: users-service}
  template:
    metadata:
      labels: {app: users-service}
    spec:
      restartPolicy: Always
      containers:
        - name: users-service
          image: mamgel/usuarios_servicio:1.1
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet: {path: /healthcheck, port: 3001}
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /healthcheck, port: 3001}
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: microapp
spec:
  type: ClusterIP
  selector: {app: users-service}
  ports:
    - port: 3001
      targetPort: 3001
