kubernetes/11-products.yaml
# products-service: Deployment (2 replicas) + Service ClusterIP (puerto 3002)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: microapp
  labels: {app: products-service}
spec:
  replicas: 2
  selector:
    matchLabels: {app: products-service}
  template:
    metadata:
      labels: {app: products-service}
    spec:
      restartPolicy: Always
      containers:
        - name: products-service
          image: mamgel/productos_servicio:1.1
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet: {path: /healthcheck, port: 3002}
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /healthcheck, port: 3002}
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
  namespace: microapp
spec:
  type: ClusterIP
  selector: {app: products-service}
  ports:
    - port: 3002
      targetPort: 3002
