kubernetes/12-orders.yaml
# orders-service: Deployment (2 replicas) + Service ClusterIP (puerto 3003)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: microapp
  labels: {app: orders-service}
spec:
  replicas: 2
  selector:
    matchLabels: {app: orders-service}
  template:
    metadata:
      labels: {app: orders-service}
    spec:
      restartPolicy: Always
      containers:
        - name: orders-service
          image: mamgel/ordenes_servicio:1.1
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet: {path: /healthcheck, port: 3003}
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /healthcheck, port: 3003}
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: microapp
spec:
  type: ClusterIP
  selector: {app: orders-service}
  ports:
    - port: 3003
      targetPort: 3003
